--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,12 @@
 vignettes/*.html
 vignettes/*.pdf
 
+# produced plots
+*.pdf
+*.png
+*.eps
+*.png
+
 # OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
 .httr-oauth
 
@@ -37,3 +43,4 @@ vignettes/*.pdf
 
 # R Environment Variables
 .Renviron
+
